Set up CI with Azure Pipelines
Initial creation of windows pipleline create [skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,3 +14,16 @@ steps:
     Contents: '**'
     TargetFolder: '$(build.artifactstagingdirectory)'
 
+- task: AzureResourceManagerTemplateDeployment@3
+  inputs:
+    deploymentScope: 'Resource Group'
+    azureResourceManagerConnection: 'az connection nonprod'
+    subscriptionId: '09dee83d-9601-47e3-987c-fa3e50df110a'
+    action: 'Create Or Update Resource Group'
+    resourceGroupName: 'in-ea-arm-dev-rg'
+    location: 'Australia East'
+    templateLocation: 'Linked artifact'
+    csmFile: '$(Build.ArtifactStagingDirectory)/azuredeploy.json'
+    csmParametersFile: '$(Build.ArtifactStagingDirectory)/azuredeploy.parameters.json'
+    overrideParameters: '-adminUsername $(adminUsername) -administratorLoginPassword $(ARM_PASS)'
+    deploymentMode: 'Incremental'
